[package]
name = "indy_load_generator"
authors = ["c2bo"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indy-vdr = { git = "https://github.com/hyperledger/indy-vdr", branch = "did-indy" }
rand =  "0.5"
clap = { version = "3.1.3", features = ["derive"] }
log = "0.4.0"
env_logger = "0.9.0"
futures-executor = "0.3.17"
serde = "1.0"
serde_json = "1.0"

[features]
derive = []
